--- a/tutorial/sequence/sequence-exercise-3.html
+++ b/tutorial/sequence/sequence-exercise-3.html
@@ -27,27 +27,27 @@ limitations under the License.
     animation groups. Let's get started on some harder exercises.</p>
 
   <p class="description">For this exercise, create 4 animations to 4 
-    different items. Divide the animations evenly into 2 groups where 
-    the first group contains the 1st and 2nd elements. The second group 
-    should wait until the first group has finished running to run. The 
-    elements of the first group should move 300px and 400px from left 
-    respectively. The group should run for 3 seconds and repeat twice. 
-    The second group should move 300px and 400px from left respectively 
-    where the 2nd element in the group will have to wait half way to start. 
-    That is each element should run for 4 seconds and the 2nd element will 
-    wait for 2 seconds to run. The second group should also repeat itself 3 
-    times. In addition, the first group will change colours from red to green 
-    then back to red, the second group will change colours from blue to yellow 
-    then to blue.</p>
+  different animation divs. Divide the animations evenly into 2 groups where 
+  the first group contains the 1st and 2nd elements. The second group 
+  should wait until the first group has finished running to run. The 
+  elements of the first group should move 300px and 400px from left 
+  respectively. The group should run for 3 seconds and repeat twice. 
+  The second group should move 300px and 400px from left respectively 
+  where the 2nd element in the group will have to wait half way to start. 
+  That is each element should run for 4 seconds and the 2nd element will 
+  wait for 2 seconds to run. The second group should also repeat itself 3 
+  times. In addition, the first group will change colours from red to green 
+  then back to red, the second group will change colours from blue to yellow 
+  then to blue.</p>
 
   <ul class="description">
     <li>Create 4 animations.</li>
     <li>Create 2 groups, group the 1st and 2nd elements into the first 
-      and the rest into the second.</li>
+    and the rest into the second.</li>
     <li>Animate the first group such that it repeats twice. Elements in 
-      this group should run in parallel.</li>
+    this group should run in parallel.</li>
     <li>Animate the second group such that one runs half way to anther and 
-      repeats itself 3 times. Elements should run in sequence</li>
+    repeats itself 3 times. Elements should run in sequence</li>
     <li>First group changes colour from red to green then to red.</li>
     <li>Second group changes colour from blue to yellow then to blue.</li>
   </ul>
