added invisible divs to indicate the number of animation divs in the exercise

--- a/tutorial/sequence/sequence-exercise-2.html
+++ b/tutorial/sequence/sequence-exercise-2.html
@@ -19,6 +19,8 @@ limitations under the License.
 
 <div class="content">
 
+  <div id="animNum">3</div>
+
 	<div class="heading subTitle">Sequential Animation Group</div>
 
   <div class="heading exercises">Exercise 2 - Overlapping (Challenge)</div>
