--- a/tutorial/sequence/sequence-exercise-1.html
+++ b/tutorial/sequence/sequence-exercise-1.html
@@ -19,6 +19,8 @@ limitations under the License.
 
 <div class="content">
 
+  <div id="animNum">1</div>
+
 	<div class="heading subTitle">Sequential Animation Group</div>
 
   <div class="heading exercises">Exercise 1 - Make a Sequential Group</div>
