--- a/tutorial/sequence/sequence-exercise-3.html
+++ b/tutorial/sequence/sequence-exercise-3.html
@@ -19,6 +19,8 @@ limitations under the License.
 
 <div class="content">
 
+  <div id="animNum">4</div>
+
 	<div class="heading subTitle">Sequential Animation Group</div>
 
   <div class="heading exercises">Exercise 3 - More Challenges</div>
